# eduvoda-app

./: CMakeLists.txt  aboutus.qml  basket.qml  catalog.qml  contacts.qml  data.h  db.db  good.qml  liked.qml  main.cpp  main.qml  market.pro  net.h  profile.qml  qml.qrc  qtquickcontrols2.conf  register.qml  resources.qrc  sales.qml  sqlhandler.cpp  sqlhandler.h  startscreen.qml
components/: BottomTabBar.qml  BottomTabBarButton.qml  Category.qml  CategoryBtn.qml  Good.qml  GoodInBasket.qml  GradientRect1.qml  GradientRect2.qml  GreenBtn.qml  GreenBtnGoHome.qml  LikedGood.qml  MiniBtnLayer.qml
